--- a/stylehome/templates/layout/footer.html
+++ b/stylehome/templates/layout/footer.html
@@ -1,45 +1,16 @@
 <!-- Start Footer Section -->
 <footer class="footer-section">
-    <div class="row bgwhite">
-        <div class="col-lg-8">
-            <div class="subscription-form">
-                <h3 class="d-flex align-items-center"><span class="me-1"><img src="{% static 'images/envelope-outline.svg' %}" alt="Image" class="img-fluid"></span><span>Regístrate para conocer más</span> </span></h3>
-                <span><h4 class="desc">Suscríbete a nuestra familia para conocer más promociones</h4>
-
-                <form action="#" class="row g-1">
-                    <div class="col-auto">
-                        <input type="email" class="form-control" placeholder="Compártenos tu email">
-                    </div>
-                    <div class="col-auto">
-                        <button class="btn btn-primary">
-                            <span class="fa fa-paper-plane"></span>
-                        </button>
-                    </div>
-                </form>
-
-            </div>
-        </div>
-    </div>
-    <div class="container relative">
-        <div class="sofa-img">
-            <img src="{% static 'images/sofa.png' %}" alt="Image" class="img-fluid">
-        </div>
-        <div class="row g-5 mb-5">
+    <div class="container pt-5 pb-4">
+        <div class="row">
             <div class="col-lg-4">
-                <div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo bold">Style Home<span>.</span></a></div>
-                <p class="mb-2 bold">121 king street, Melbourne 3000</p>
-                <p class="mb-2 bold">+52 9934315127</p>
-                <p class="mb-2 bold">stylehome@outlook.com</p>
-
-                <ul class="list-unstyled custom-social">
-                    <li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-                    <li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-                    <li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-                </ul>
+                <div class="mb-4"><a href="#" class="text-black fs-4"><strong>Style Home</strong></a></div>
+                <p class="mb-2 text-black"><strong>121 king street, Melbourne 3000</strong></p>
+                <p class="mb-2 text-black"><strong>+52 9934315127</strong></p>
+                <p class="mb-2 text-black"><strong>stylehome@outlook.com</strong></p>
             </div>
             <div class="col-lg-8">
-                <div class="row links-wrap">
+                <p class="text-black"><strong>Compras</strong></p>
+                <div class="row">
                     <div class="col-6 col-sm-6 col-md-3">
                         <ul class="list-unstyled">
                             <li><a href="#" >Tu carrito</a></li>
@@ -47,7 +18,6 @@
                             <li><a href="#">Contácanos</a></li>
                         </ul>
                     </div>
-
                     <div class="col-6 col-sm-6 col-md-3">
                         <ul class="list-unstyled">
                             <li><a href="#" >Tus pedidos</a></li>
@@ -59,9 +29,7 @@
         </div>
     </div>
     <div class="copy line_footer">
-        <div class="text">
-            <p>Style Home © – Derechos Reservados  </p>
-        </div>
+        <span>Style Home © – Derechos Reservados</span>
     </div>
 </footer>
 <!-- End Footer Section -->	
