--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -75,8 +75,8 @@
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="{% url 'login' %}"><i class="fa-solid fa-user"></i></a></li>
-					<li><a class="nav-link" href="{% url 'cart' %}"><i class="fa-solid fa-cart-shopping"></i></a></li>
+					<li><a class="nav-link" href="{% url 'login' %}"><i class="fa-solid fa-user text-black"></i></a></li>
+					<li><a class="nav-link" href="{% url 'cart' %}"><i class="fa-solid fa-cart-shopping text-black"></i></a></li>
 				</ul>
 			</div>
 		</div>
