--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -54,71 +54,81 @@ Home
 <section class="product-section">
 		<div class="row justify-content-between">
 
-			<!-- Start Column 1 -->
 			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Nordic Chair</h3>
-					<strong class="product-price">$50.00</strong>
-
-					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 1 -->
-
-			<!-- Start Column 2 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="{% static 'images/product-2.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Kruzo Aero Chair</h3>
-					<strong class="product-price">$78.00</strong>
-
-					<span class="icon-cross">
-						<img src="{% static 'images/cross.svg' %}" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 2 -->
-
-			<!-- Start Column 3 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<div class="selected-item">
-					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Ergonomic Chair</h3>
-					<strong class="product-price">$43.00</strong>
-
-					<span class="icon-cross">
-						<a href="#"  >Ver todos</a>
-					</span>
-				</div>
-			</div>
-			<!-- End Column 3 -->
-			
-			<!-- Start Column 4 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<div class="selected-item" >
-					<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Ergonomic Chair</h3>
-					<p class="little-desc">Silla plegable para el parque Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-					<strong class="product-price">$43.00</strong>
-
-					<span class="icon-cross">
-						<a href="#"  >Ver todos</a>
-					</span>
-				</div>
-			</div>
-			<!-- End Column 4 -->
-
-			<div class="card-item">
-				<img src="{% static 'images/product-3.png' %}" alt="#">
-				<div class="card-content">
-					<h2>t</h2>
-					<a href="#">a</a>
+				<div class="card-item">
+					<div class="face front">
+						<img src="{% static 'images/product-3.png' %}" alt="">
+						<div class="card-data">
+							<h3 class="text-black">Silla Ergonómica</h3>
+							<strong class="product-price text-black">$30.00</strong>
+						</div>
+					</div>
+					<div class="face back">
+						<h3>Silla Ergonómica</h3>
+						<p>Este y mas se pueden encontrar en nuestra tienda, consulte cada el catalogo</p>
+						<div class="card-link">
+							<a href="#">Ver todos</a>
+						</div>
+					</div>
 				</div>
 			</div>
 
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="card-item">
+					<div class="face front">
+						<img src="{% static 'images/product-3.png' %}" alt="">
+						<div class="card-data">
+							<h3 class="text-black">Silla Ergonómica</h3>
+							<strong class="product-price text-black">$30.00</strong>
+						</div>
+					</div>
+					<div class="face back">
+						<h3>Silla Ergonómica</h3>
+						<p>Este y mas se pueden encontrar en nuestra tienda, consulte cada el catalogo</p>
+						<div class="card-link">
+							<a href="#">Ver todos</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="card-item">
+					<div class="face front">
+						<img src="{% static 'images/product-3.png' %}" alt="">
+						<div class="card-data">
+							<h3 class="text-black">Silla Ergonómica</h3>
+							<strong class="product-price text-black">$30.00</strong>
+						</div>
+					</div>
+					<div class="face back">
+						<h3>Silla Ergonómica</h3>
+						<p>Este y mas se pueden encontrar en nuestra tienda, consulte cada el catalogo</p>
+						<div class="card-link">
+							<a href="#">Ver todos</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="card-item">
+					<div class="face front">
+						<img src="{% static 'images/product-3.png' %}" alt="">
+						<div class="card-data">
+							<h3 class="text-black">Silla Ergonómica</h3>
+							<strong class="product-price text-black">$30.00</strong>
+						</div>
+					</div>
+					<div class="face back">
+						<h3>Silla Ergonómica</h3>
+						<p>Este y mas se pueden encontrar en nuestra tienda, consulte cada el catalogo</p>
+						<div class="card-link">
+							<a href="#">Ver todos</a>
+						</div>
+					</div>
+				</div>
+			</div>
 			
 		</div>
 </section>
