--- a/stylehome/apps/client/templates/login.html
+++ b/stylehome/apps/client/templates/login.html
@@ -15,7 +15,7 @@ Login
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="{% static 'images/login-img.jpg' %}" alt="login form"
-                class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 665px;" />
+                class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 665px; view-transition-name: login-img;" />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
@@ -44,7 +44,7 @@ Login
                         class="btn btn-dark btn-lg btn-block" type="button">Login</button></a>
                   </div>
 
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="#!"
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'register' %}"
                       style="color: #393f81;">Register here</a></p>
                   <a href="#!" class="small text-muted">Terms of use.</a>
                   <a href="#!" class="small text-muted">Privacy policy</a>
