traduje cosas, hice funcionar el form del home de suscripcion y elimine otras cosas de plantillas

--- a/stylehome/apps/contact/templates/contact.html
+++ b/stylehome/apps/contact/templates/contact.html
@@ -48,7 +48,7 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                  <p>Prolongación Quintín Arauz Carrillo 901</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
@@ -64,7 +64,7 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>info@yourdomain.com</p>
+                  <p>stylehome@outlook.com</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
@@ -80,7 +80,7 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>+1 294 3925 3939</p>
+                  <p>+52 9934315127</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
@@ -90,28 +90,28 @@ Contact Us
             <div class="row">
               <div class="col-6">
                 <div class="form-group">
-                  <label for="fname">First name</label>
+                  <label for="fname">Nombre(s)</label>
                   <input type="text" class="form-control" id="fname" name="from_name" required>
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group">
-                  <label for="lname">Last name</label>
+                  <label for="lname">Apellidos</label>
                   <input type="text" class="form-control" id="lname" name="last_name" required>
                 </div>
               </div>
             </div>
             <div class="form-group">
-              <label for="email">Email address</label>
+              <label for="email">Correo Electronico</label>
               <input type="email" class="form-control" id="email" name="from_email" required>
             </div>
 
             <div class="form-group mb-5">
-              <label for="message">Message</label>
+              <label for="message">Mensaje</label>
               <textarea name="message" class="form-control" id="message" cols="30" rows="5" required></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
+            <button type="submit" class="btn btn-primary-hover-outline">Enviar Mensaje</button>
           </form>
 
         </div>
