--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -61,16 +61,16 @@
 			<div class="collapse navbar-collapse" id="navbarsFurni">
 				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 					<li class="{% if request.path == '/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'home' %}">Home</a>
+						<a class="nav-link" href="{% url 'home' %}">Inicio</a>
 					</li>
 					<li class="{% if request.path == '/shop/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'shop' %}">Shop</a>
+						<a class="nav-link" href="{% url 'shop' %}">Tienda</a>
 					</li>
 					<li class="{% if request.path == '/about/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'about' %}">About us</a>
+						<a class="nav-link" href="{% url 'about' %}">Sobre Nosotros</a>
 					</li>
 					<li class="{% if request.path == '/contact/' %}nav-item active{% endif %}">
-						<a class="nav-link" href="{% url 'contact' %}">Contact us</a>
+						<a class="nav-link" href="{% url 'contact' %}">Contáctanos</a>
 					</li>
 				</ul>
 
