--- a/stylehome/templates/layout/footer.html
+++ b/stylehome/templates/layout/footer.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="mb-4"><a href="#" class="text-black fs-4"><strong>Style Home</strong></a></div>
-                <p class="mb-2 text-black"><strong>121 king street, Melbourne 3000</strong></p>
+                <p class="mb-2 text-black"><strong>Prolongación Quintín Arauz Carrillo 901</strong></p>
                 <p class="mb-2 text-black"><strong>+52 9934315127</strong></p>
                 <p class="mb-2 text-black"><strong>stylehome@outlook.com</strong></p>
             </div>
@@ -15,7 +15,7 @@
                         <ul class="list-unstyled">
                             <li><a href="#" >Tu carrito</a></li>
                             <li><a href="#" >Productos</a></li>
-                            <li><a href="#">Contácanos</a></li>
+                            <li><a href="#">Contáctanos</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
