--- a/stylehome/apps/about/templates/about.html
+++ b/stylehome/apps/about/templates/about.html
@@ -13,7 +13,7 @@ About Us
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="col-lg-6">
-                <h2 class="section-title">Porqué Escogernos</h2>
+                <h2 class="section-title">¿Por qué escogernos?</h2>
                 <p>En StyleHome, nos apasiona transformar espacios en hogares acogedores y elegantes. Ofrecemos una cuidada selección de muebles y decoraciones de alta calidad, diseñados para reflejar tu estilo único y satisfacer tus necesidades. Con un compromiso inquebrantable con la excelencia y un servicio al cliente excepcional, nos esforzamos por hacer que cada compra sea una experiencia agradable y sin complicaciones. Escógenos para darle vida a tu hogar con piezas que combinan belleza, funcionalidad y durabilidad.</p>
 
                 <div class="row my-5">
