--- a/stylehome/apps/cart/templates/cart.html
+++ b/stylehome/apps/cart/templates/cart.html
@@ -15,12 +15,12 @@ Cart
           <table class="table">
             <thead>
               <tr>
-                <th class="product-thumbnail">Image</th>
-                <th class="product-name">Product</th>
-                <th class="product-price">Price</th>
-                <th class="product-quantity">Quantity</th>
+                <th class="product-thumbnail"></th>
+                <th class="product-name">Producto</th>
+                <th class="product-price">Precio</th>
+                <th class="product-quantity">Cantidad</th>
                 <th class="product-total">Total</th>
-                <th class="product-remove">Remove</th>
+                <th class="product-remove">Eliminar</th>
               </tr>
             </thead>
             <tbody>
@@ -83,22 +83,10 @@ Cart
       <div class="col-md-6">
         <div class="row mb-5">
           <div class="col-md-6 mb-3 mb-md-0">
-            <button class="btn btn-black btn-sm btn-block">Update Cart</button>
+            <button class="btn btn-black btn-sm btn-block">Actualizar Carrito</button>
           </div>
           <div class="col-md-6">
-            <button class="btn btn-outline-black btn-sm btn-block">Continue Shopping</button>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <label class="text-black h4" for="coupon">Coupon</label>
-            <p>Enter your coupon code if you have one.</p>
-          </div>
-          <div class="col-md-8 mb-3 mb-md-0">
-            <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
-          </div>
-          <div class="col-md-4">
-            <button class="btn btn-black">Apply Coupon</button>
+            <button class="btn btn-outline-black btn-sm btn-block"><a href="shop" style="color: white !important;">Continuar comprando</a></button>
           </div>
         </div>
       </div>
@@ -107,7 +95,7 @@ Cart
           <div class="col-md-7">
             <div class="row">
               <div class="col-md-12 text-right border-bottom mb-5">
-                <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                <h3 class="text-black h4 text-uppercase">Total del Carrito</h3>
               </div>
             </div>
             <div class="row mb-3">
@@ -129,8 +117,7 @@ Cart
 
             <div class="row">
               <div class="col-md-12">
-                <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To
-                  Checkout</button>
+                <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Pagar</button>
               </div>
             </div>
           </div>
