--- a/stylehome/apps/client/templates/login.html
+++ b/stylehome/apps/client/templates/login.html
@@ -31,21 +31,21 @@ Login
 
                   <div data-mdb-input-init class="form-outline mb-4">
                     <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example17">Email address</label>
+                    <label class="form-label" for="form2Example17">Correo Electronico</label>
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
                     <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example27">Password</label>
+                    <label class="form-label" for="form2Example27">Contraseña</label>
                   </div>
 
                   <div class="pt-1 mb-4">
                     <a href="{% url 'profile' %}"><button data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-dark btn-lg btn-block" type="button">Login</button></a>
+                        class="btn btn-dark btn-lg btn-block" type="button">Iniciar sesión</button></a>
                   </div>
 
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'register' %}"
-                      style="color: #393f81;">Register here</a></p>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">¿Aún no tienes una cuenta? <a href="{% url 'register' %}"
+                      style="color: #393f81;">Registrate aquí</a></p>
                   <a href="#!" class="small text-muted">Terms of use.</a>
                   <a href="#!" class="small text-muted">Privacy policy</a>
                 </form>
