--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -54,6 +54,28 @@ Home
 <section class="product-section">
 		<div class="row justify-content-between">
 
+			{% for category in categories %}
+			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="card-item">
+					<div class="face front">
+						<img src="{{ category.image.url }}" alt="">
+						<div class="card-data">
+							<h3 class="text-black">{{ category.name }}</h3>
+							<strong class="product-price text-black">{{ category.price }}</strong> 
+						</div>
+					</div>
+					<div class="face back">
+						<h3>{{ category.name }}</h3>
+						<p>{{ category.description }}</p>
+						<div class="card-link">
+							<a href="#">Ver todos</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+
+			<!----
 			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 				<div class="card-item">
 					<div class="face front">
@@ -110,26 +132,7 @@ Home
 					</div>
 				</div>
 			</div>
-
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<div class="card-item">
-					<div class="face front">
-						<img src="{% static 'images/product-3.png' %}" alt="">
-						<div class="card-data">
-							<h3 class="text-black">Silla Ergonómica</h3>
-							<strong class="product-price text-black">$30.00</strong>
-						</div>
-					</div>
-					<div class="face back">
-						<h3>Silla Ergonómica</h3>
-						<p>Este y mas se pueden encontrar en nuestra tienda, consulte cada el catalogo</p>
-						<div class="card-link">
-							<a href="#">Ver todos</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			
+			--->
 		</div>
 </section>
 <!-- End Product Section -->
