--- a/stylehome/apps/shop/templates/product.html
+++ b/stylehome/apps/shop/templates/product.html
@@ -13,7 +13,7 @@ Shop
       <div class="row gx-5">
         <aside class="col-lg-6">
           <div class="border rounded-4 mb-3 d-flex justify-content-center">
-            <img style="max-width: 100%; max-height: 100vh; margin: auto; view-transition-name: product-{{ product.id }};" class="rounded-4 fit" src="https://mdbcdn.b-cdn.net/img/bootstrap-ecommerce/items/detail1/big.webp">
+            <img style="max-width: 100%; max-height: 100vh; margin: auto; view-transition-name: product-{{ product.id }};" class="rounded-4 fit" src="{{ product.image.url }}">
           </div>
           <!-- thumbs-wrap.// -->
           <!-- gallery-wrap .end// -->
@@ -89,7 +89,7 @@ Shop
                 {% for similar_product in similar_products %}
                     <div class="d-flex mb-3">
                       <a href="{% url 'product' similar_product.id %}" class="me-3">
-                        <img src="https://mdbcdn.b-cdn.net/img/bootstrap-ecommerce/items/8.webp" style="min-width: 96px; height: 96px; view-transition-name: product-{{ similar_product.id }};" class="img-md img-thumbnail">
+                        <img src="{{ similar_product.image.url }}" style="min-width: 96px; height: 96px; view-transition-name: product-{{ similar_product.id }};" class="img-md img-thumbnail">
                       </a>
                       <div class="info">
                         <a href="#" class="nav-link mb-1">
