--- a/stylehome/apps/shop/templates/shop.html
+++ b/stylehome/apps/shop/templates/shop.html
@@ -93,7 +93,7 @@ Shop
 			<div class="col-12 col-md-4 col-lg-3 mb-3">
 				<a href="{% url 'product' product.id %}" class="product-item" style="view-transition-name: product-{{ product.id }};">
 					{% if product.image %}
-						<img src="{{ product.image.url }}" alt="{{ product.name }}]">
+						<img src="{{ product.image.url }}" alt="{{ product.name }}">
 					{% else %}
 						<img src="{% static 'images/product-3.png' %}" alt="">
 					{% endif %}
