--- a/stylehome/apps/contact/templates/contact.html
+++ b/stylehome/apps/contact/templates/contact.html
@@ -30,7 +30,7 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                  <p>Carretera Federal Vhs-Teapa, Km. 14.6 Parrilla II, Centro, Tabasco. C.P. 86288</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
@@ -46,7 +46,7 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>info@yourdomain.com</p>
+                  <p>info@stylehome.com</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
@@ -62,39 +62,11 @@ Contact Us
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>+1 294 3925 3939</p>
+                  <p>+52 (993) 3-92-39-39</p>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
           </div>
-
-          <form>
-            <div class="row">
-              <div class="col-6">
-                <div class="form-group">
-                  <label class="text-black" for="fname">First name</label>
-                  <input type="text" class="form-control" id="fname">
-                </div>
-              </div>
-              <div class="col-6">
-                <div class="form-group">
-                  <label class="text-black" for="lname">Last name</label>
-                  <input type="text" class="form-control" id="lname">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="text-black" for="email">Email address</label>
-              <input type="email" class="form-control" id="email">
-            </div>
-
-            <div class="form-group mb-5">
-              <label class="text-black" for="message">Message</label>
-              <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
-            </div>
-
-            <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
-          </form>
 
         </div>
 
